# Algorithm_Practice

./: .gitignore  README.md
DataStructure/Stack/: CMakeLists.txt  main.cpp  stack_list.h  stack_shuffling.h
LeetCode/: CMakeLists.txt
LeetCode/0001-two-sum/: CMakeLists.txt  main.cpp  two_sum.py
LeetCode/0002-Add two numbers/: CMakeLists.txt  main.cpp  main.py
LeetCode/0003-Longest substring without repeating/: CMakeLists.txt  main.cpp  main.py
LeetCode/0004-Median of Two Sorted Arrays/: CMakeLists.txt  main.cpp
LeetCode/0005-Longest Palindromic Substring/: CMakeLists.txt  main.cpp  mian.py
LeetCode/0006-ZigZag Conversion/: main.py
LeetCode/0007-reverse/: CMakeLists.txt  main.cpp  reverse_int.py
LeetCode/0009-Palindrome Number/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0011-Container With Most Water/: CMakeLists.txt  main.cpp  main.py
LeetCode/0012-Integer to Roman/: main.py
LeetCode/0013-Roman to Integer/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0014-longest_common_prefix/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0015-3Sum/: CMakeLists.txt  main.cpp  main.py
LeetCode/0016-3Sum Closest/: CMakeLists.txt  main.cpp  main.py
LeetCode/0017-Letter Combinations of a Phone Number/: main.py
LeetCode/0018-4Sum/: main.py
LeetCode/0019-Remove Nth Node from the end of the List/: CMakeLists.txt  main.cpp
LeetCode/0020-valid parentheses/: CMakeLists.txt  main.cpp  main.py
LeetCode/0021-Merge two sorted lists/: CMakeLists.txt  main.cpp  main.py
LeetCode/0022-Generate parentheses/: CMakeLists.txt  main.cpp  main.py
LeetCode/0023-Merge k Sorted Lists/: CMakeLists.txt  main.cpp  main.py
LeetCode/0024-Swap Nodes in Pairs/: main.py
LeetCode/0025-Reverse Nodes in k-Group/: main.py
LeetCode/0026-Remove Duplicates from Sorted Array/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0027-RemoveElement/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0028-Implement strStr()/: main.py
LeetCode/0031-Next permutation/: main.py
LeetCode/0032-Longest valid parenthesis/: main.py
LeetCode/0033-Search in Rotated Sorted Array/: CMakeLists.txt  main.cpp  main.py
LeetCode/0034-Find first & last pos of element in a sorted arr/: CMakeLists.txt  main.cpp  main.py
LeetCode/0035-Search Insert Position/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0036-Valid Sudoku/: main.py
LeetCode/0037-Sudoku Solver/: main.py
LeetCode/0038-Count and Say/: CMakeLists.txt  main.cpp  solution.py
LeetCode/0039-Combination Sum/: main.py
LeetCode/0040-Combination Sum II/: main.py
LeetCode/0041-First missing positive/: mian.py
LeetCode/0042-Trapping Water/: CMakeLists.txt  main.cpp
LeetCode/0043-Multiply Strings/: main.py
LeetCode/0045-Jump Game II/: main.py
LeetCode/0046-Permutations/: main.py
LeetCode/0047-Permutations II/: main.py
LeetCode/0048-Rotate image/: CMakeLists.txt  main.cpp  main.py
LeetCode/0049-Group Anagrams/: main.py
LeetCode/0051-N-Queens/: main.py
LeetCode/0052-N Queens II/: mian.py
LeetCode/0053-Maximum Subarray/: CMakeLists.txt  main.cpp  main.py
LeetCode/0054-Spiral Matrix/: CMakeLists.txt  main.cpp  main.py
LeetCode/0055-Jump Game/: main.py
LeetCode/0056-Merge Intervals/: CMakeLists.txt  main.cpp  main.py
LeetCode/0057-Insert Interval/: main.py
LeetCode/0059-Spiral Matrix II/: main.py
LeetCode/0061-Rotate List/: CMakeLists.txt  main.cpp  main.py
LeetCode/0062-Unique Paths/: main.cpp  main.py
LeetCode/0063-Unique Paths II/: CMakeLists.txt  main.cpp  main.py
LeetCode/0064-Minimum Path Sum/: main.py
LeetCode/0066-Plus One/: solution.py
LeetCode/0067-Add binary/: main.py
LeetCode/0068-Text justification/: main.py
LeetCode/0069-Sqrt(x)/: solution.py
LeetCode/0070-Climbing Stairs/: CMakeLists.txt  main.cpp  main.py
LeetCode/0076-Minimum Window Substring/: CMakeLists.txt  main.cpp  main.py
LeetCode/0077-Combinations/: main.py
LeetCode/0078-Sub sets/: main.py
LeetCode/0079-Word Search/: main.py
LeetCode/0080-Remove Duplicates from Sorted Array II/: main.py
LeetCode/0081-Search in Rotated Sorted Array II/: CMakeLists.txt  main.cpp  main.py
LeetCode/0082-Remove duplicates from sorted lists2/: CMakeLists.txt  main.cpp
LeetCode/0083-Remove duplicates from sorted lists/: CMakeLists.txt  main.cpp
LeetCode/0088-Merge Sorted Array/: CMakeLists.txt  main.cpp
LeetCode/0091-Decode digits/: main.py
LeetCode/0092-Reverse Linked List II/: CMakeLists.txt  main.cpp
LeetCode/0094-Binary Tree Inorder Traversal/: CMakeLists.txt  main.cpp  main.py
LeetCode/0098-Validate Binary Search Tree/: main.py
LeetCode/0099-Recover Binary Search Tree/: main.py
LeetCode/0100-Same Tree/: CMakeLists.txt  main.cpp  main.py
LeetCode/0101-Symmetric Tree/: CMakeLists.txt  main.cpp  main.py
LeetCode/0102-Binary Tree Level Order Traversal/: CMakeLists.txt  main.cpp  main.py
LeetCode/0103-Binary Tree Zigzag Level Order Traversal/: main.py
LeetCode/0104-Maximum Depth of Binary Tree/: CMakeLists.txt  main.cpp  main.py
LeetCode/0105-Construct Binary Tree from Preorder and Inorder Traversal/: main.py
LeetCode/0106-Construct Binary Tree from Inorder and Postorder Traversal/: main.py
LeetCode/0109-Convert sorted List to BST/: main.py
(+458 files in other folders)
